--- a/portfolio.html
+++ b/portfolio.html
@@ -26,27 +26,27 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="file:///Users/Brooks/Desktop/code/Responsive-Portfolio/assets/Dead%20Rose.jpg" alt="Word Guess">
+        <img src="../Responsive-Portfolio/assets/Dead%20Rose.jpg" alt="Word Guess">
 
         <h3>Word Guess</h3>
       </div>
       <div class="work">
-        <img src="file:///Users/Brooks/Desktop/code/Responsive-Portfolio/assets/Purple%20Flowers.jpg" alt="RPG Game">
+        <img src="../Responsive-Portfolio/assets/Purple%20Flowers.jpg" alt="RPG Game">
 
         <h3>RPG Game</h3>
       </div>
       <div class="work">
-        <img src="file:///Users/Brooks/Desktop/code/Responsive-Portfolio/assets/Santa%20Barbara%20Flower.jpg" alt="Trivia Game">
+        <img src="../Responsive-Portfolio/assets/Santa%20Barbara%20Flower.jpg" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
       </div>
       <div class="work">
-        <img src="file:///Users/Brooks/Desktop/code/Responsive-Portfolio/assets/Waikiki%20Sunset.jpg" alt="Rutgers Info Widget">
+        <img src="../Responsive-Portfolio/assets/Waikiki%20Sunset.jpg" alt="Rutgers Info Widget">
 
         <h3>Rutgers Info Widget</h3>
       </div>
       <div class="work">
-        <img src="file:///Users/Brooks/Desktop/code/Responsive-Portfolio/assets/Water%20Lily.jpg" alt="Rock Paper Scissors">
+        <img src="../Responsive-Portfolio/assets/Water%20Lily.jpg" alt="Rock Paper Scissors">
 
         <h3>Rock Paper Scissors</h3>
       </div>
